Se agrego la entidad ItemCotizacion y se cambio las entidades Factura y Cotizacion para un mejor manejo. Ademas de que se crearon sus respectivos DTO y se agregaron metodos para convertir Long a objetos dentro de ClienteMapper y ProductoMapper para su correcto uso y conversion en CotizacionMapper. Se actualizaron los servicios para las partes de update, ademas de agregar CotizacionService. Se completaron los controladores